<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginsignup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentos.Loginsignup"
    >


    <ImageView
        android:id="@+id/backgroundloginsignup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroundloggin"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/logo1"
        android:layout_width="106dp"
        android:layout_height="137dp"
        android:background="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline12"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37" />

    <TextView
        android:id="@+id/ellugartext"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo1"
        android:fontFamily="@font/jua_normal"
        android:text="@string/el_lugar_mas_seguro_para_tu_dinero"
        android:textColor="#ffffff"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline12"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toBottomOf="@+id/logo1"
        app:layout_constraintVertical_bias="0.26" />

    <Button
        android:id="@+id/botoncrearcuenta"
        android:layout_width="315dp"
        android:layout_height="50dp"
        android:layout_below="@+id/ellugartext"
        android:background="@drawable/boton_redondeado"
        android:fontFamily="@font/jua_normal"
        android:text="@string/crear_cuenta_nueva"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/guideline12"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.89" />

    <TextView
        android:id="@+id/tienescuentatext"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_below="@id/botoncrearcuenta"
        android:fontFamily="@font/jua_normal"
        android:text="@string/ya_tiene_cuenta"
        android:textColor="@color/azulalkeosc"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botoncrearcuenta"
        app:layout_constraintVertical_bias="0.72" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.13" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.89" />

</androidx.constraintlayout.widget.ConstraintLayout>

