<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragments.HomePage">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.34" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/background9" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="305dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="174dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038"
        app:srcCompat="@drawable/profile_picture" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="73dp"
        android:layout_height="37dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="53dp"
        android:layout_marginBottom="179dp"
        android:fontFamily="@font/jua_normal"
        android:text="Inicio"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lineHeight="30dp"
        tools:textSize="25sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="124dp"
        android:layout_marginBottom="118dp"
        android:fontFamily="@font/jua_normal"
        android:text="Hola, Amanda!"
        android:textColor="#80FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:lineHeight="24dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="123dp"
        android:layout_height="24dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="80dp"
        android:fontFamily="@font/jua_normal"
        android:text="Balance Total"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/transactionAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/jua_normal"
        android:text="$ 124.57"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:lineHeight="40sp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="325dp"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.976"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.511"
        app:srcCompat="@drawable/notifications__icon" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.50121653"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="205dp"
        android:fontFamily="@font/jua_normal"
        android:text="@string/ultimas_transacciones"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline14"
        app:layout_constraintTop_toBottomOf="@+id/botonVerde1"
        app:layout_constraintVertical_bias="0.0" />

    <RelativeLayout
        android:id="@+id/botonVerde1"
        android:layout_width="165dp"
        android:layout_height="49dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/botonverde_alke"
        app:layout_constraintEnd_toStartOf="@+id/guideline13"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7">


        <TextView
            android:id="@+id/textView13"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="56dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="22dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/jua_normal"
            android:text="@string/enviar_dinero"
            android:textAllCaps="false"
            android:textColor="@color/black">

        </TextView>

        <ImageView
            android:id="@+id/logosend"
            android:layout_width="21dp"
            android:layout_height="17dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="35dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="109dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/send_icon" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/boton_ingresar1"
        android:layout_width="165dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/boton_redondeado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toTopOf="@+id/guideline7">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="47dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="7dp"
            android:fontFamily="@font/jua_normal"
            android:text="@string/ingresar_dinero"
            android:textAllCaps="false"
            android:textColor="@color/white">

        </TextView>

        <ImageView

            android:id="@+id/logorequest"
            android:layout_width="21dp"
            android:layout_height="17dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="26dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="118dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/request_icon" />

    </RelativeLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="28dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="384dp" />


    <FrameLayout
        android:layout_width="356dp"
        android:layout_height="419dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        app:layout_constraintVertical_bias="0.84">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/users_item" />


    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>







